adds Page Author name

--- a/crompton.html
+++ b/crompton.html
@@ -3,7 +3,7 @@
 <title>Page Title</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="">
-<meta name="Page Author" content=""/>
+<meta name="Page Author" content="Constance Crompton"/>
 <style>
 </style>
 <script src=""></script>
