adds a title and completes paragraph one

--- a/crompton.html
+++ b/crompton.html
@@ -12,8 +12,8 @@
 <img src="https://www.uottawa.ca/study/sites/g/files/bhrskd296/files/styles/max_width_l_2x_2940px/public/2021-10/6D4A0713B_0.jpg" alt="The canal from above, uOttawa Social Science, Arts, and Business buildings on the right" style="width:100%">
 
 <div class="">
- <h1>This is a Heading</h1>
- <p>This is a paragraph.</p>
+ <h1>My wonderful page</h1>
+ <p>This is a paragraph, and how gorgeous it is.</p>
  <p>This is another paragraph.</p>
  <p>Here is yet another paragraph.</p>
 </div>
