adds ellipses to paragraph three

--- a/crompton.html
+++ b/crompton.html
@@ -15,7 +15,7 @@
  <h1>My wonderful page</h1>
  <p>This is a paragraph, and how gorgeous it is.</p>
  <p>This is another paragraph.</p>
- <p>Here is yet another paragraph.</p>
+ <p>Here is yet another paragraph...</p>
 </div>
 
 </body>
