Beautifies with rodent loveliness.

--- a/rose.html
+++ b/rose.html
@@ -9,12 +9,14 @@
 <script src=""></script>
 <body>
 
-<img src="https://www.uottawa.ca/study/sites/g/files/bhrskd296/files/styles/max_width_l_2x_2940px/public/2021-10/6D4A0713B_0.jpg" alt="The canal from above, uOttawa Social Science, Arts, and Business buildings on the right" style="width:100%">
+<img src="https://cdn.britannica.com/93/150093-050-A20009B5/guinea-pigs-coloration.jpg" alt="Cavies aka Guinea Pigs" style="width:100%">
 
 <div class="">
- <h1>This is a Heading</h1>
- <p>This is a paragraph.</p>
+ <h1>Surprise!</h1>
+ <p>What a lovely paragraph. But this is an awkward <br/> shift.</p>
  <p>This is another paragraph.</p>
+ <p>I'm remembering how to do all this.</p>
+ <p>Heave! Ho!</p>
 </div>
 
 </body>
