barre html edits 1

--- a/barre.html
+++ b/barre.html
@@ -1,10 +1,13 @@
 <html lang="en">
 <meta charset="UTF-8">
-<title>Page Title</title>
+<title>Ottawa Tourist Information</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="">
 <meta name="Page Author" content=""/>
 <style>
+    h1 {color: seagreen;}
+    h1 {text-align: center;}
+    p  {font-style: italic;}
 </style>
 <script src=""></script>
 <body>
@@ -12,9 +15,9 @@
 <img src="https://www.uottawa.ca/study/sites/g/files/bhrskd296/files/styles/max_width_l_2x_2940px/public/2021-10/6D4A0713B_0.jpg" alt="The canal from above, uOttawa Social Science, Arts, and Business buildings on the right" style="width:100%">
 
 <div class="">
- <h1>This is a Heading</h1>
- <p>This is a paragraph.</p>
- <p>This is another paragraph.</p>
+ <h1>Tourist Information</h1>
+ <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+ <p>From the Tourist Board of Ottawa</p>
 </div>
 
 </body>
