--- a/belanger.html
+++ b/belanger.html
@@ -1,20 +1,21 @@
 <html lang="en">
 <meta charset="UTF-8">
-<title>Page Title</title>
+<title>The #1 Talking Heads fan page</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="">
-<meta name="Page Author" content=""/>
+<meta name="Page Author" content="Koopy Troopy"/>
 <style>
+    h1 {color: red}
+    p {color:green}
 </style>
 <script src=""></script>
 <body>
 
-<img src="https://www.uottawa.ca/study/sites/g/files/bhrskd296/files/styles/max_width_l_2x_2940px/public/2021-10/6D4A0713B_0.jpg" alt="The canal from above, uOttawa Social Science, Arts, and Business buildings on the right" style="width:100%">
+<img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExbDE4aDN2bTB6c285YXVvMzcwNnY1NHFqc2sxajYzM3R6Mmk3OHVtdiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/cjl4HpeoRiiFa/giphy.gif" alt="The canal from above, uOttawa Social Science, Arts, and Business buildings on the right" style="width:100%">
 
 <div class="">
- <h1>This is a Heading</h1>
- <p>This is a paragraph.</p>
- <p>This is another paragraph.</p>
+ <h1>This must be the place</h1>
+ <p>Well, actually</br></br>it's a double line break on the #1 Talking Heads fan page</p></br></br> 
 </div>
 
 </body>
