add a 2nd paragraph

--- a/belanger.html
+++ b/belanger.html
@@ -16,7 +16,7 @@
 <div class="">
  <h1>This must be the place</h1>
  <p>Well, actually</br></br>it's a double line break on the #1 Talking Heads fan page</p></br></br> 
+ <p>I wonder how you got here?</p>
 </div>
-
 </body>
 </html>
